# PINNProof

./: .gitmodules  README.md  pyproject.toml
examples/: example_SM2.ipynb  example_SM2_residuals.ipynb  example_SM4.ipynb  example_SM4_residuals.ipynb  example_SM6.ipynb  example_SM6_residuals.ipynb  example_comparisor.ipynb  example_package_smoke_tests.ipynb  path_setup.py  train_nn.py
examples/pretrained_models/: SM4_PDynamicNN_0.2s_with_data.pth  SM4_P_LBFGS_seed7.pth  SM6DynamicNN_0.2s_only_pinn.pth  SM6DynamicNN_0.2s_with_data.pth  SM6DynamicNN_0.2s_with_data1.pth  SM6_LBFGS_seed7.pth  SM_AVR_GOV_LBFGS_seed7.pth  architectures.py
examples/python/: validation_quickstart.py  (+1 more)
pinn_analysis/: best_worst_ics.csv  calibration_deciles.csv  global_rmse.csv  manifest.json  per_trajectory_rms.csv  residual_error_correlations.csv  time_series_mean_abs.csv
pinn_analysis_general/: best_worst_ics.csv  global_rmse.csv  integral_vs_error_metrics.csv  integral_vs_error_time_series.csv  per_trajectory_rms.csv  residual_error_correlations.csv  time_series_mean_abs.csv
pinn_analysis_general_SM4/: best_worst_ics.csv  global_rmse.csv  integral_vs_error_metrics.csv  integral_vs_error_time_series.csv  manifest.json  per_trajectory_rms.csv  residual_error_correlations.csv  time_series_mean_abs.csv
pinn_analysis_nodata/: best_worst_ics.csv  calibration_deciles.csv  global_rmse.csv  manifest.json  per_trajectory_rms.csv  residual_error_correlations.csv  time_series_mean_abs.csv
pinn_five_compare_SM4/: global_rmse.csv  rmse_per_traj.csv
src/: __init__.py  verification.py
(+23 files in other folders)
